fix: enable preview for running tests